@@ -5,6 +5,8 @@ lintian (2.5.32) UNRELEASED; urgency=medium
   * checks/cruft.{desc,pm}:
     + [BR] Detect non free lenna file based on filename and filetype.
       (Closes: #771191).
+    + [BR] Avoid a false positive for autogenerated index in dx package
+      for source-is-missing.
   * checks/changes-file.{desc,pm}:
     + [NT] Downgrade backports-changes-missing to a wishlist (I) tag.
       Thanks to Vincent Cheng for the report.  (Closes: #785084)
